rust/src/methods/compile/code/snapshots/calc_fragments@uses.calc.snap
---
source: rust/src/methods/compile/code/calc.rs
expression: "compile(&PathBuf::from(path), code)"
input_file: fixtures/fragments/calc/uses.calc

---
[
  [
    {
      "type": "Use",
      "range": [
        0,
        0,
        0,
        1
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "a",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Use",
      "range": [
        1,
        0,
        1,
        1
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "b",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Use",
      "range": [
        1,
        8,
        1,
        9
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "c",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Use",
      "range": [
        2,
        0,
        2,
        1
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "d",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Use",
      "range": [
        2,
        2,
        2,
        3
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "e",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Use",
      "range": [
        2,
        10,
        2,
        11
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "f",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Use",
      "range": [
        3,
        0,
        3,
        10
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "g",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Use",
      "range": [
        3,
        0,
        3,
        10
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/calc/uses.calc",
      "name": "h",
      "kind": "Number"
    }
  ]
]
