rust/src/methods/compile/code/snapshots/py_fragments@assigns.py.snap
---
source: rust/src/methods/compile/code/py.rs
expression: "compile(&PathBuf::from(path), code)"
input_file: fixtures/fragments/py/assigns.py

---
[
  [
    {
      "type": "Assign",
      "range": [
        0,
        0,
        0,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var1",
      "kind": "Integer"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        1,
        0,
        1,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var2",
      "kind": ""
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        3,
        4,
        3,
        8
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "fun1",
      "kind": "Function"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        4,
        0,
        4,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "fun2",
      "kind": "Function"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        6,
        0,
        6,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var3",
      "kind": "Boolean"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        7,
        0,
        7,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var4",
      "kind": "Boolean"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        8,
        0,
        8,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var5",
      "kind": "Integer"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        9,
        0,
        9,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var6",
      "kind": "Number"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        10,
        0,
        10,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var7",
      "kind": "String"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        11,
        0,
        11,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var8",
      "kind": "Array"
    }
  ],
  [
    {
      "type": "Assign",
      "range": [
        12,
        0,
        12,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/assigns.py",
      "name": "var9",
      "kind": "Object"
    }
  ]
]
