rust/src/methods/compile/code/snapshots/py_fragments@reads.py.snap
---
source: rust/src/methods/compile/code/py.rs
expression: "compile(&PathBuf::from(path), code)"
input_file: fixtures/fragments/py/reads.py

---
[
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path1"
    }
  ],
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path2"
    }
  ],
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path3"
    }
  ],
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path4"
    }
  ],
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path5"
    }
  ],
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path6"
    }
  ],
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path7"
    }
  ],
  [
    "reads",
    {
      "type": "File",
      "path": "fragments/py/path8"
    }
  ],
  [
    "writes",
    {
      "type": "File",
      "path": "fragments/py/write"
    }
  ]
]
