rust/src/methods/compile/code/snapshots/py_fragments@writes.py.snap
---
source: rust/src/methods/compile/code/py.rs
expression: "compile(&PathBuf::from(path), code)"
input_file: fixtures/fragments/py/writes.py

---
[
  [
    {
      "assign": [
        0,
        0,
        0,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/writes.py",
      "name": "var1",
      "kind": ""
    }
  ],
  [
    {
      "write": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/path1"
    }
  ],
  [
    {
      "assign": [
        2,
        0,
        2,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/writes.py",
      "name": "var2",
      "kind": "Array"
    }
  ],
  [
    {
      "write": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/path2"
    }
  ],
  [
    {
      "use": [
        4,
        12,
        4,
        16
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/writes.py",
      "name": "var2",
      "kind": ""
    }
  ],
  [
    {
      "write": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/path3"
    }
  ],
  [
    {
      "write": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/path4"
    }
  ],
  [
    {
      "assign": [
        10,
        4,
        10,
        13
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/writes.py",
      "name": "open_func",
      "kind": "Function"
    }
  ],
  [
    {
      "write": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/path5"
    }
  ],
  [
    {
      "read": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/read"
    }
  ],
  [
    {
      "read": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/read"
    }
  ],
  [
    {
      "read": [
        0,
        0,
        0,
        0
      ]
    },
    {
      "type": "File",
      "path": "fragments/py/read"
    }
  ],
  [
    {
      "assign": [
        22,
        0,
        22,
        4
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/writes.py",
      "name": "var2",
      "kind": ""
    }
  ],
  [
    {
      "use": [
        23,
        5,
        23,
        9
      ]
    },
    {
      "type": "Symbol",
      "path": "fragments/py/writes.py",
      "name": "var2",
      "kind": ""
    }
  ]
]
