rust/src/methods/compile/code/snapshots/r_fragments@assigns.R.snap
---
source: rust/src/methods/compile/code/r.rs
expression: "compile(&PathBuf::from(path), code)"
input_file: fixtures/fragments/r/assigns.R

---
[
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/assigns.R",
      "name": "var1",
      "kind": "Number"
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/assigns.R",
      "name": "var2",
      "kind": "Number"
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/assigns.R",
      "name": "fun1",
      "kind": "Function"
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/assigns.R",
      "name": "var3",
      "kind": "Number"
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/assigns.R",
      "name": "var4",
      "kind": "Number"
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/assigns.R",
      "name": "var5",
      "kind": ""
    }
  ]
]
