rust/src/methods/compile/code/snapshots/r_fragments@reads.R.snap
---
source: rust/src/methods/compile/code/r.rs
expression: "compile(&PathBuf::from(path), code)"
input_file: fixtures/fragments/r/reads.R

---
[
  [
    "read",
    {
      "type": "File",
      "path": "fragments/r/path1"
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/reads.R",
      "name": "data",
      "kind": "Datatable"
    }
  ],
  [
    "read",
    {
      "type": "File",
      "path": "fragments/r/path2"
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/reads.R",
      "name": "foo",
      "kind": "Function"
    }
  ],
  [
    "read",
    {
      "type": "File",
      "path": "fragments/r/path3"
    }
  ]
]
