rust/src/methods/compile/code/snapshots/r_fragments@uses.R.snap
---
source: rust/src/methods/compile/code/r.rs
expression: "compile(&PathBuf::from(path), code)"
input_file: fixtures/fragments/r/uses.R

---
[
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var1",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "fun1",
      "kind": "Function"
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var2",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var3",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "fun2",
      "kind": "Function"
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var4",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var5",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var6",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var7",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var8",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var9",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var10",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var11",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var12",
      "kind": ""
    }
  ],
  [
    "use",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "var13",
      "kind": ""
    }
  ],
  [
    "assign",
    {
      "type": "Symbol",
      "path": "fragments/r/uses.R",
      "name": "assign",
      "kind": "Number"
    }
  ]
]
